--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,27 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "Python project consisting of 5 mini-games."
 authors = ["destr0yer25 <rom.nikoloff@yandex.ru>"]
 readme = "README.md"
+repository = "https://github.com/destr0yer25/python-project-49"
 packages = [
  { include = "brain_games" },
+]
+classifiers = [
+	"Development Status :: 5 - Production/Stable",
+	"Intended Audience :: End Users/Desktop",
+	"Operating System :: OS Independent",
+	"Programming Language :: Python",
+	"Programming Language :: Python :: 3",
+        "Programming Language :: Python :: 3.6",
+        "Programming Language :: Python :: 3.7",
+        "Programming Language :: Python :: 3.8",
+        "Programming Language :: Python :: 3.9",
+        "Programming Language :: Python :: 3.10",
+        "Programming Language :: Python :: 3.11",
+        "Programming Language :: Python :: 3.12",
+        "Topic :: Games/Entertainment"
 ]
 
 
@@ -25,6 +41,7 @@ brain-prime = "brain_games.scripts.brain_prime:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
+
 
 [build-system]
 requires = ["poetry-core"]
